# tamtri

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json
core/: Cargo.toml  build.rs
core/assets/example/: report.html
core/recipes/: committee.json  handoff.json
core/src/: app.rs  artifact.rs  config.rs  debug_log.rs  diagnostics.rs  error.rs  lib.rs  project.rs  search.rs
core/src/conversation/: meta.rs  mod.rs  model.rs  ops.rs  reduce.rs  roots.rs
core/src/credentials/: keychain.rs  mod.rs  sealed.rs
core/src/daemon/: dispatch.rs  mod.rs
core/src/ffi/: tamtri.udl
core/src/harness/: acp.rs  auth.rs  claude.rs  codex.rs  discovery.rs  health.rs  mod.rs  readiness.rs  registry.rs  roster.rs  sessions.rs  spawn_env.rs  tools.rs  usage.rs
core/src/harness/claude/: events.rs  history.rs  mod.rs  session.rs
core/src/harness/codex/: events.rs  history.rs  mod.rs  session.rs
core/src/harness/opencode/: client.rs  events.rs  mod.rs  server.rs  session.rs
core/src/harness/pi/: events.rs  mod.rs  rpc.rs  session.rs
core/src/mcp/: app.rs  app_bridge.rs  bridge.rs  capabilities.rs  client.rs  elicitation.rs  endpoint.rs  gateway.rs  gateway_content.rs  gateway_tasks.rs  jsonrpc.rs  mod.rs  oauth.rs  protocol.rs  roots.rs  server.rs  tasks.rs  url_handoff.rs
core/src/mcp/transport/: mod.rs
core/src/orchestration/: engine.rs  events.rs  mcp_tools.rs  mod.rs  recipe.rs  run.rs  store.rs
core/src/protocol/: mod.rs  params.rs
core/src/relay/: crypto.rs  keypair.rs  mod.rs  pairing.rs  server_id.rs
core/src/rpc/: dispatch.rs  jsonrpc.rs  mod.rs
core/src/rpc/transport/: http.rs  mod.rs  stdio.rs
core/src/vault/: bundle.rs  events.rs  example_seed.rs  fs.rs  mod.rs  naming.rs
core/tests/: acp_gateway_elicitation.rs  acp_integration.rs  app_bridge_allow_audit.rs  app_navigation_audit.rs  app_webview_bridge.rs  artifact_navigation_audit.rs  artifact_webview_policy.rs  claude_integration.rs  codex_integration.rs  daemon_dispatch.rs  elicitation_persistence.rs  events_secret_redaction.rs  facade_integration.rs  gateway.rs  gateway_app.rs  gateway_elicitation.rs  gateway_endpoint.rs  gateway_oauth.rs  gateway_tasks.rs  m7_roots.rs  mcp_capabilities.rs  mcp_http.rs  mcp_integration.rs  milestone5_artifact_integration.rs  milestone8_phase_a.rs  milestone8_phase_b.rs  milestone8_phase_d.rs  orchestration_async.rs  pi_integration.rs  projects.rs  reducer_golden.rs  roots_listed_audit.rs  task_ref_persistence.rs  vault.rs
core/tests/fixtures/reducer/: elicitation_request_response.events.json  elicitation_request_response.expected.json  file_changed_no_artifact.events.json  harness_error.events.json  harness_error.expected.json  interleaved_thinking.events.json  interleaved_thinking.expected.json  lifecycle_no_blocks.events.json  lifecycle_no_blocks.expected.json  permission_compact.events.json  permission_compact.expected.json  terminal_output.events.json  terminal_output.expected.json  text_thinking_collapse.events.json  text_thinking_collapse.expected.json  tool_call_pair.events.json  tool_call_pair.expected.json
daemon/: Cargo.toml
daemon/src/: lib.rs  main.rs  relay_attachment.rs  runtime_dir.rs  server.rs
daemon/tests/: ws_transport.rs
docs/: README.md  Untitled  daemon-protocol.md  design.md  events-format.md  external-path-brokering.md  ffi.md  getting-started.md  harness-adapter.md  mcp-client.md  milestone-1.md  milestone-2.md  milestone-3.md  milestone-4.md  milestone-5.md  milestone-6.md  milestone-7.md  milestone-8.md  observation-sessions.md  orchestration.md  product-brief.md  product-gaps.md  provider-adapters.md  quickstart.md  react-transcript-plan.md  relay-threat-model.md  renderer.md  tamtri-decisions.md  testing-elicitation.md  testing-m7.md  testing-oauth.md  vault-format.md  visual-qa-checklist.md
fixtures/: README.md  config.example.json  mock-pi-rpc.sh
macos/: Package.swift
plans/: 001-restore-artifact-sandbox.md  002-fix-project-root-attach-scope.md  003-fix-unfiled-thread-and-home-redirect.md  004-snapshot-roots-on-project-delete.md  005-refresh-conversation-list-after-project-mutations.md  006-wire-move-project-and-root-remove.md  007-commit-pnpm-lockfile-align-ts.md  008-add-root-test-script.md  009-dedupe-conversation-list-hook.md  010-audit-index.md  README.md  react-doctor-baseline.md  react-doctor-triage.md
renderer/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: build-renderer.sh  connection-smoke.mjs  dev-desktop.mjs  dev-ios.mjs  dev-web.mjs  dev.mjs  hero-smoke.sh  m8-checklist.sh  sync-design-tokens.sh
(+105 files in other folders)
