[package]
name = "tamtri-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "mock-mcp-server"
path = "../fixtures/mock-mcp-server/src/main.rs"

[[bin]]
name = "mock-acp-agent"
path = "../fixtures/mock-acp-agent/src/main.rs"

[[bin]]
name = "twenty-questions-mcp"
path = "../fixtures/twenty-questions-mcp/src/main.rs"

[[bin]]
name = "m7-rc-mcp"
path = "../fixtures/m7-rc-mcp/src/main.rs"

[[bin]]
name = "m7-roots-mcp"
path = "../fixtures/m7-roots-mcp/src/main.rs"

[[bin]]
name = "m7-task-mcp"
path = "../fixtures/m7-task-mcp/src/main.rs"

[[bin]]
name = "m7-task-subscribe-mcp"
path = "../fixtures/m7-task-subscribe-mcp/src/main.rs"

[[bin]]
name = "m7-app-mcp"
path = "../fixtures/m7-app-mcp/src/main.rs"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
crypto_box = { version = "0.9", features = ["serde", "rand_core"] }
rand = "0.8"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
typeshare = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time", "test-util"] }
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v7", "serde"] }
dirs = "6"
zip = { version = "2", default-features = false, features = ["deflate"] }
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
tracing-subscriber = "0.3"
