[package]
name = "tamtri-daemon"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "AGPL-3.0-or-later"

[[bin]]
name = "tamtri-daemon"
path = "src/main.rs"

[dependencies]
tamtri-core = { path = "../core" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
dirs = "5"

[dev-dependencies]
tokio-tungstenite = "0.29"
futures-util = "0.3"
tempfile = "3"
